add customer def

--- a/package.json
+++ b/package.json
@@ -15,26 +15,46 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf lib",
-    "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
+    "pouchable": "^1.1.1",
+    "pouchdb": "^6.1.2"
   },
   "devDependencies": {
     "@types/chai": "^3.0.0",
     "@types/mocha": "^2.0.0",
     "@types/node": "6.0.31",
+    "babel-plugin-istanbul": "^4.0.0",
     "chai": "^3.0.0",
     "mocha": "^3.0.0",
+    "mocha-typescript": "^1.0.22",
     "rimraf": "^2.0.0",
     "ts-node": "^1.0.0",
-    "tslint": "^4.0.0",
     "typescript": "^2.0.0"
   },
   "engines": {
     "node": ">=4.0.0"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "lib",
+      "src/index.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [],
+    "all": true
   }
 }
