--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf lib",
-    "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
+    "build": "npm run clean && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
@@ -29,12 +29,14 @@
     "@types/chai": "^3.0.0",
     "@types/mocha": "^2.0.0",
     "@types/node": "6.0.31",
+    "acorn": "^4.0.11",
     "babel-plugin-istanbul": "^4.0.0",
     "chai": "^3.0.0",
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
     "rimraf": "^2.0.0",
     "ts-node": "^1.0.0",
+    "tspoon": "^1.0.328",
     "typescript": "^2.0.0"
   },
   "engines": {
