--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "acorn": "^4.0.11",
     "babel-plugin-istanbul": "^4.0.0",
     "chai": "^3.0.0",
+    "markdown-table": "^1.1.0",
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
     "rimraf": "^2.0.0",
