--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
+    "generate": "npm run build && cd generator && ./generate.sh && cd ..",
     "clean": "rimraf lib",
     "build": "npm run clean && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
-    "cover": "npm run build && nyc cover mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
+    "cover": "npm run build && nyc report --reporter=html mocha --compilers ts:ts-node/register",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
@@ -36,6 +37,7 @@
     "markdown-table": "^1.1.0",
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
+    "nyc": "^10.1.2",
     "rimraf": "^2.0.0",
     "ts-node": "^1.0.0",
     "tspoon": "^1.0.328",
