--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,23 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "DatabaseAccess",
+            "program": "mocha",
+            "args": [
+                "--compilers",
+                "ts:ts-node/register",
+                "-u",
+                "tdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceRoot}/tests/Sync-specs.ts"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Mocha Tests",
             "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
             "args": [
