--- a/package.json
+++ b/package.json
@@ -38,17 +38,19 @@
     "acorn": "^4.0.11",
     "babel-plugin-istanbul": "^4.0.0",
     "chai": "^3.0.0",
+    "express": "^4.15.2",
     "express-pouchdb": "^2.3.6",
+    "faker": "^4.1.0",
     "markdown-table": "^1.1.0",
     "memdown": "^1.2.4",
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
     "nyc": "^10.1.2",
+    "pouchdb-security": "^2.3.6",
     "rimraf": "^2.6.1",
     "ts-node": "^1.0.0",
     "tspoon": "^1.0.328",
-    "typescript": "^2.0.0",
-    "faker": "^4.1.0"
+    "typescript": "^2.0.0"
   },
   "engines": {
     "node": ">=4.0.0"
