--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "couchdb-to-mysql": "0.0.2",
     "lodash": "^4.17.4",
     "metaphone": "^1.0.1",
     "pouchable": "^1.1.8",
@@ -45,7 +46,7 @@
     "istanbul-coveralls": "^1.0.3",
     "markdown-table": "^1.1.0",
     "memdown": "^1.2.4",
-    "ts-promise": "^0.3.4",   
+    "ts-promise": "^0.3.4",
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
     "nyc": "^10.1.2",
