--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "removeComments": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",  "src/**/*"
   ],
   "exclude": [
     "node_modules"
