--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/chai": "^3.0.0",
     "@types/mocha": "^2.0.0",
+    "@types/node": "^7.0.16",
     "acorn": "^4.0.11",
     "babel-plugin-istanbul": "^4.0.0",
     "chai": "^3.0.0",
@@ -44,14 +45,14 @@
     "istanbul-coveralls": "^1.0.3",
     "markdown-table": "^1.1.0",
     "memdown": "^1.2.4",
-    "ts-promise": "^0.3.4",
-    "ts-node": "1.0.0",
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
     "mysql": "^2.13.0",
     "nyc": "^10.1.2",
     "pouchdb-security": "^2.3.6",
     "rimraf": "^2.6.1",
+    "ts-node": "1.0.0",
+    "ts-promise": "^0.3.4",
     "tspoon": "^1.0.328",
     "typescript": "2.2.2"
   },
