move etl to src

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "cover": "npm run build && nyc --reporter=text --reporter=html mocha --compilers ts:ts-node/register && open coverage/index.html",
     "report-cover": "npm run build && nyc --reporter=lcov mocha --compilers ts:ts-node/register && node_modules/.bin/istanbul-coveralls",
     "watch": "npm run build -- --watch",
-    "watch:test": "npm run test -- --watch",
-    "genSQL": "tsc --experimentalDecorators --target es5 etl/script.ts"
+    "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
     "lodash": "^4.17.4",
