--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lodash": "^4.17.4",
     "metaphone": "^1.0.1",
     "pouchable": "^1.1.21",
-    "pouchdb": "^6.1.2",
+    "pouchdb": "6.1.2",
     "pouchdb-authentication": "^0.5.5"
   },
   "devDependencies": {
