--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mocha": "^3.0.0",
     "mocha-typescript": "^1.0.22",
     "mysql": "^2.13.0",
+    "moment": "^2.18.1",
     "nyc": "^10.1.2",
     "pouchdb-security": "^2.3.6",
     "rimraf": "^2.6.1",
