skip ETL process

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "metaphone": "^1.0.1",
     "pouchable": "^1.1.24",
