--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sudzy-db",
-  "version": "0.5.28",
+  "version": "0.5.31",
   "description": "sudzy-db",
   "license": "MIT",
   "repository": "https://github.com/sudzy-group/com.sudzy.db.git",
@@ -29,13 +29,13 @@
     "lodash": "^4.17.4",
     "metaphone": "^1.0.1",
     "pouchable": "^1.1.30",
-    "pouchdb": "^7.1.1",
-    "pouchdb-authentication": "^0.5.5"
+    "pouchdb": "7.1.1",
+    "pouchdb-authentication": "0.5.5"
   },
   "devDependencies": {
     "@types/chai": "^3.0.0",
     "@types/mocha": "^2.0.0",
-    "@types/node": "^7.0.16",
+    "@types/node": "8.5.5",
     "acorn": "^4.0.11",
     "async": "^2.4.1",
     "babel-plugin-istanbul": "^4.0.0",
@@ -56,7 +56,7 @@
     "nyc": "^10.1.2",
     "pouchdb-security": "^2.3.6",
     "rimraf": "^2.6.1",
-    "ts-node": "1.0.0",
+    "ts-node": "2.0.0",
     "ts-promise": "^0.3.4",
     "tspoon": "^1.0.328",
     "typescript": "2.2.2",
